--- a/devotionals.html
+++ b/devotionals.html
@@ -1677,8 +1677,10 @@
                 if (dateParam && devotionalsDB[dateParam]) {
                     initialDate = dateParam;
                 } else {
-                    //default to currentdate(newest devotional)
-                    initialDate = "2026-02-11";
+                    //default to 
+                
+                    
+   auto = "auto";
                 }
                 datePicker.value = initialDate;
                 loadDevotionalForDate(initialDate);
